<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/imageninicio"
    tools:context=".MainActivity"

    >

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"
        android:text="@string/PreparemosDeComer"
        android:textColor="@color/colorPrimary"
        android:textSize="24dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edNombreUsuario"
        android:layout_width="286dp"
        android:layout_height="43dp"
        android:layout_marginTop="104dp"
        android:background="@color/botonesInicio"
        android:drawableLeft="@drawable/ic_usaurio"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/IngresaTuNumbre"
        android:inputType="textPersonName"
        android:textColor="#fff"
        android:textColorHint="@color/colorPrimary"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_marginTop="232dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edNombreUsuario">

        <Button
            android:id="@+id/btnInicar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/botonesInicio"
            android:text="@string/btnIniciar"
            android:textSize="25dp"
            android:textColor="#FF9800"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnCreditos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/botonesInicio"
                android:text="@string/Creditos"
                android:textColor="#fff" />

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/botonesInicio"
                android:text="@string/btnAgradecimiento"
                android:textColor="#fff" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>